First microservice commit

--- a/streamdata-to-kafka/src/main/resources/application.yml
+++ b/streamdata-to-kafka/src/main/resources/application.yml
@@ -7,7 +7,7 @@ stream-data-to-kafka-service:
     - Big data
     - python
   welcome-message: Hello microservices!
-  enable-mock-tweets: false
+  enable-mock-tweets: true
   mock-min-tweet-length: 5
   mock-max-tweet-length: 15
   mock-sleep-ms: 10000
