--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,15 @@
 	<modelVersion>4.0.0</modelVersion>
 	<modules>
 		<module>streamdata-to-kafka</module>
-	</modules>
+    <module>app-config-data</module>
+  </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.moder.microservice</groupId>
+	<groupId>com.microservices.demo</groupId>
 	<artifactId>modernmicroservices</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>modernmicroservices</name>
@@ -26,6 +27,11 @@
 	</properties>
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>com.microservices.demo</groupId>
+				<artifactId>app-config-data</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter</artifactId>
