--- a/streamdata-to-kafka/pom.xml
+++ b/streamdata-to-kafka/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>modernmicroservices</artifactId>
-    <groupId>com.moder.microservice</groupId>
+    <groupId>com.microservices.demo</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -16,6 +16,10 @@
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>app-config-data</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
