--- a/streamdata-to-kafka/src/main/resources/application.yml
+++ b/streamdata-to-kafka/src/main/resources/application.yml
@@ -6,8 +6,9 @@ stream-data-to-kafka-service:
     - Elasticsearch
     - Big data
     - python
+    - madarchod
   welcome-message: Hello microservices!
-  enable-mock-tweets: true
+  enable-mock-tweets: false
   mock-min-tweet-length: 5
   mock-max-tweet-length: 15
   mock-sleep-ms: 10000
