--- a/kafka/kafka-producer/pom.xml
+++ b/kafka/kafka-producer/pom.xml
@@ -15,5 +15,23 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
+  <dependencies>
+    <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>app-config-data</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>kafka-model</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.confluent</groupId>
+      <artifactId>kafka-avro-serializer</artifactId>
+    </dependency>
+  </dependencies>
 
 </project>
