--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,14 @@
 		<avro.version>1.11.0</avro.version>
 		<spring-kafka.version>2.8.5</spring-kafka.version>
 		<spring-retry.version>1.3.3</spring-retry.version>
+		<kafka-avro.version>7.1.1</kafka-avro.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>confluent</id>
+			<url>https://packages.confluent.io/maven/</url>
+		</repository>
+	</repositories>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -40,6 +47,11 @@
 			<dependency>
 				<groupId>com.microservices.demo</groupId>
 				<artifactId>common-config</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.microservices.demo</groupId>
+				<artifactId>kafka-model</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -95,7 +107,16 @@
 				<artifactId>spring-boot-starter-webflux</artifactId>
 				<version>${spring-boot.version}</version>
 			</dependency>
-
+			<!--<dependency>
+				<groupId>io.confluent</groupId>
+				<artifactId>kafka-avro-serializer</artifactId>
+				<version>${kafka-avro.version}}</version>
+			</dependency>-->
+			<dependency>
+				<groupId>io.confluent</groupId>
+				<artifactId>kafka-avro-serializer</artifactId>
+				<version>7.1.1</version>
+			</dependency>
 
 		</dependencies>
 	</dependencyManagement>
