--- a/kafka/kafka-admin/pom.xml
+++ b/kafka/kafka-admin/pom.xml
@@ -6,6 +6,7 @@
     <artifactId>kafka</artifactId>
     <groupId>com.microservices.demo</groupId>
     <version>0.0.1-SNAPSHOT</version>
+    <!--<relativePath>../../pom.xml</relativePath>-->
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -21,16 +22,21 @@
       <artifactId>app-config-data</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>common-config</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
