--- a/streamdata-to-kafka/pom.xml
+++ b/streamdata-to-kafka/pom.xml
@@ -21,6 +21,14 @@
       <artifactId>app-config-data</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>kafka-admin</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>kafka-producer</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
     </dependency>
@@ -36,6 +44,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
