--- a/streamdata-to-kafka/src/main/resources/application.yml
+++ b/streamdata-to-kafka/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8070
 stream-data-to-kafka-service:
   twitter-keywords:
     - Java
@@ -27,3 +29,13 @@ kafka-config:
     - twitter-topic
   num-of-partitions: 3
   replication-factor: 3
+kafka-producer-config:
+  key-serialization-class: org.apache.kafka.serialization.LongSerializer
+  value-serialization-class: org.apache.kafka.serializers.KafkaAvroSerializer
+  compression-type: snappy
+  acks: all
+  batch-size: 16384
+  batch-size-boost-factor: 100
+  linger-ms: 5
+  request-timeout-ms: 60000
+  retry-count: 5
