--- a/streamdata-to-kafka/pom.xml
+++ b/streamdata-to-kafka/pom.xml
@@ -42,6 +42,10 @@
       <artifactId>twitter4j-stream</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <scope>provided</scope>
