--- a/streamdata-to-kafka/src/main/resources/application.yml
+++ b/streamdata-to-kafka/src/main/resources/application.yml
@@ -1,41 +1,5 @@
 server:
   port: 8070
-stream-data-to-kafka-service:
-  twitter-keywords:
-    - Java
-    - Microservices
-    - Kafka
-    - Elasticsearch
-    - Big data
-    - python
-    - madarchod
-  welcome-message: Hello microservices!
-  enable-mock-tweets: false
-  mock-min-tweet-length: 5
-  mock-max-tweet-length: 15
-  mock-sleep-ms: 10000
-retry-config:
-  initial-interval-ms: 1000
-  max-interval-ms: 10000
-  multiplier: 2.0
-  maxAttempts: 3
-  sleep-time-ms: 2000
-kafka-config:
-  bootstrap-servers: localhost:19092,localhost:29092,localhost:39092
-  schema-registry-url-key: schema.registry.url
-  schema-registry-url: http://localhost:8081
-  topic-name: stream-data-topic
-  topic-names-to-create:
-    - twitter-topic
-  num-of-partitions: 3
-  replication-factor: 3
-kafka-producer-config:
-  key-serialization-class: org.apache.kafka.serialization.LongSerializer
-  value-serialization-class: org.apache.kafka.serializers.KafkaAvroSerializer
-  compression-type: snappy
-  acks: all
-  batch-size: 16384
-  batch-size-boost-factor: 100
-  linger-ms: 5
-  request-timeout-ms: 60000
-  retry-count: 5
+spring:
+  profiles:
+    active: stream_data_to_kafka
