--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<module>kafka/kafka-producer</module>
 		<module>common-config</module>
 		<module>config-server</module>
+		<module>jasyptplayground</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -36,6 +37,7 @@
 		<kafka-avro-serializer.version>5.5.1</kafka-avro-serializer.version>
 		<spring-cloud.version>2.2.6.RELEASE</spring-cloud.version>
 		<spring-cloud-dependencies.version>Hoxton.SR9</spring-cloud-dependencies.version>
+		<jasypt.version>3.0.4</jasypt.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -178,8 +180,11 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
-
-
+			<dependency>
+				<groupId>com.github.ulisesbocchio</groupId>
+				<artifactId>jasypt-spring-boot-starter</artifactId>
+				<version>${jasypt.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
