--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -2,5 +2,5 @@ server:
   port: 8888
 logging:
   level:
-    root: debug
-    org.spring.framework.cloud.config: debug
+    root: info
+    org.spring.framework.cloud.config: info
