--- a/elastic/elastic-index-client/pom.xml
+++ b/elastic/elastic-index-client/pom.xml
@@ -33,6 +33,14 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>elastic-model</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>elastic-model</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
