--- a/kafka-to-elastic-service/pom.xml
+++ b/kafka-to-elastic-service/pom.xml
@@ -29,6 +29,18 @@
       <artifactId>kafka-model</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>elastic-model</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>elastic-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>elastic-index-client</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
     </dependency>
