--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,16 @@
 				<artifactId>elastic-model</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.microservices.demo</groupId>
+				<artifactId>elastic-config</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.microservices.demo</groupId>
+				<artifactId>elastic-index-client</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
@@ -216,13 +226,6 @@
 				<artifactId>elasticsearch</artifactId>
 				<version>${elastic.version}</version>
 			</dependency>
-
-			<dependency>
-				<groupId>org.elasticsearch.client</groupId>
-				<artifactId>elasticsearch-rest-high-level-client</artifactId>
-				<version>${elastic.version}</version>
-			</dependency>
-
 		</dependencies>
 	</dependencyManagement>
 	<build>
