--- a/elastic/pom.xml
+++ b/elastic/pom.xml
@@ -16,4 +16,9 @@
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
   <packaging>pom</packaging>
+  <modules>
+    <module>elastic-model</module>
+    <module>elastic-config</module>
+    <module>elastic-index-client</module>
+  </modules>
 </project>
