--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
 		<module>kafka/kafka-consumer</module>
 		<module>kafka-to-elastic-service</module>
 		<module>elastic</module>
+    <module>common-util</module>
+		<module>elastic-query-service</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -97,6 +99,16 @@
 			<dependency>
 				<groupId>com.microservices.demo</groupId>
 				<artifactId>elastic-index-client</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.microservices.demo</groupId>
+				<artifactId>common-util</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.microservices.demo</groupId>
+				<artifactId>elastic-query-client</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
