--- a/common-util/pom.xml
+++ b/common-util/pom.xml
@@ -9,17 +9,11 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>elastic</artifactId>
+  <artifactId>common-util</artifactId>
 
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
-  <packaging>pom</packaging>
-  <modules>
-    <module>elastic-model</module>
-    <module>elastic-config</module>
-    <module>elastic-index-client</module>
-    <module>elastic-query-client</module>
-  </modules>
+
 </project>
