--- a/elastic-query-service/pom.xml
+++ b/elastic-query-service/pom.xml
@@ -56,5 +56,9 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-hateoas</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+    </dependency>
   </dependencies>
 </project>
