--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <module>elastic</module>
     <module>common-util</module>
     <module>elastic-query-service</module>
+    <module>elastic-query-web-client</module>
   </modules>
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -44,6 +45,7 @@
     <spring-cloud-dependencies.version>Hoxton.SR9</spring-cloud-dependencies.version>
     <elastic.version>7.9.1</elastic.version>
 		<springdoc-openapi.version>1.6.8</springdoc-openapi.version>
+    <thymeleaf-extras.version>3.1.0.M1</thymeleaf-extras.version>
   </properties>
   <repositories>
     <repository>
@@ -247,7 +249,16 @@
         <artifactId>springdoc-openapi-ui</artifactId>
         <version>${springdoc-openapi.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        <version>${spring-boot.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.thymeleaf.extras</groupId>
+        <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        <version>${thymeleaf-extras.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
