--- a/elastic-query-web-client/pom.xml
+++ b/elastic-query-web-client/pom.xml
@@ -18,6 +18,10 @@
   <dependencies>
     <dependency>
       <groupId>com.microservices.demo</groupId>
+      <artifactId>elastic-query-web-client-common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.microservices.demo</groupId>
       <artifactId>app-config-data</artifactId>
     </dependency>
     <dependency>
