--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
     <module>common-util</module>
     <module>elastic-query-service</module>
     <module>elastic-query-web-client</module>
+    <module>elastic-query-service-common</module>
+    <module>elastic-query-web-client-common</module>
   </modules>
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -113,6 +115,16 @@
       <dependency>
         <groupId>com.microservices.demo</groupId>
         <artifactId>elastic-query-client</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.microservices.demo</groupId>
+        <artifactId>elastic-query-service-common</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.microservices.demo</groupId>
+        <artifactId>elastic-query-web-client-common</artifactId>
         <version>${project.version}</version>
       </dependency>
 
