--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
     <module>elastic-query-web-client</module>
     <module>elastic-query-service-common</module>
     <module>elastic-query-web-client-common</module>
+    <module>reactive-elastic-query-web-client</module>
+    <module>reactive-elastic-query-service</module>
   </modules>
   <parent>
     <groupId>org.springframework.boot</groupId>
