--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -3,5 +3,6 @@ COMPOSE_FILE=common.yml:kafka_cluster.yml:services.yml
 KAFKA_VERSION=5.0.4
 ELASTIC_VERSION=7.9.1
 SERVICE_VERSION=0.0.1-SNAPSHOT
+KEYCLOAK_VERSION=11.0.3
 GLOBAL_NETWORK=application
 GROUP_ID=com.microservices.demo
