--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
     <elastic.version>7.9.1</elastic.version>
 		<springdoc-openapi.version>1.6.8</springdoc-openapi.version>
     <thymeleaf-extras.version>3.1.0.M1</thymeleaf-extras.version>
+    <postgresql.version>42.2.16</postgresql.version>
   </properties>
   <repositories>
     <repository>
@@ -272,6 +273,11 @@
         <groupId>org.thymeleaf.extras</groupId>
         <artifactId>thymeleaf-extras-springsecurity5</artifactId>
       </dependency>-->
+      <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>${postgresql.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
