--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,14 @@
     <spring-cloud.version>2.2.6.RELEASE</spring-cloud.version>
     <spring-cloud-dependencies.version>Hoxton.SR9</spring-cloud-dependencies.version>
     <elastic.version>7.9.1</elastic.version>
-		<springdoc-openapi.version>1.6.8</springdoc-openapi.version>
     <thymeleaf-extras.version>3.1.0.M1</thymeleaf-extras.version>
     <postgresql.version>42.2.16</postgresql.version>
+    <springdoc-openapi-ui.version>1.5.0</springdoc-openapi-ui.version>
+    <kafka-streams.version>2.6.0</kafka-streams.version>
+    <kafka-clients.version>2.6.0</kafka-clients.version>
+    <kafka-avro-serializer.version>5.5.1</kafka-avro-serializer.version>
+    <kafka-streams-avro-serde.version>5.5.1</kafka-streams-avro-serde.version>
+    <avro.version>1.10.0</avro.version>
   </properties>
   <repositories>
     <repository>
@@ -263,8 +268,31 @@
       <dependency>
         <groupId>org.springdoc</groupId>
         <artifactId>springdoc-openapi-ui</artifactId>
-        <version>${springdoc-openapi.version}</version>
+        <version>${springdoc-openapi-ui.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>${postgresql.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.confluent</groupId>
+        <artifactId>kafka-streams-avro-serde</artifactId>
+        <version>${kafka-streams-avro-serde.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka-streams</artifactId>
+        <version>${kafka-streams.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka-clients</artifactId>
+        <version>${kafka-clients.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
